# acdc-egg

./: .gitignore  Cargo.toml
scripts/: bisect-lemmas.py
src/: acdcfns.rs  attest.json  benchmark.rs  conds.rs  conv.rs  diff.rs  jsonrpc.rs  main.rs  probdom.json  problem10.json  problem11.json  problem12.json  problem13.json  problem14.json  problem15.json  problem16.json  problem17.json  problem18.json  problem19.json  problem3.json  problem4.json  problem5.json  problem6.json  problem7.json  problems.rs  recexpr.rs  serialize.rs  subtrees.rs  test-breaks-egg.json  test.json  vyzxlemma.rs  vyzxrules.rs
