[package]
name = "acdc-egg"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = { version = "0.10.0", features = ["serde"] }
env_logger = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
log = "0.4.26"
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["full"] }
jsonrpc-v2 = "^0.13.0"